solutions/14_gateway_api/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dh
  labels:
    dh-namespace: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: dh2
  labels:
    dh-namespace: "true"
