solutions/14_gateway_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: mariusbu
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: demo
