solutions/14_gateway_api/service_multinamespace.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: dh
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: demo

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service-dh2
  namespace: dh2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: demo
