solutions/14_gateway_api/service_new.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-new
  namespace: mariusbu
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
