solutions/14_gateway_api/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: mariusbu
spec:
  parentRefs:
  - name: marius-gateway
  hostnames:
  - "34.107.178.137.nip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-service
      port: 80
      weight: 50
    - name: demo-service-new
      port: 80
      weight: 50
